syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;

import "cmd_type.proto";
import "metadata.proto";
import "cmd_trans_msg_response.proto";

message CmdRename {
	int32 msg_size = 1;
	CmdType msg_type = 2;
	Metadata old_metadata = 3;
	Metadata new_metadata = 4;
}

message CmdRenameResponse {
	TransMsgResponse trans_msg_response = 1;
}
