syntax = "proto3";
option java_multiple_files = true;
option go_package = "github.com/somnath67643/aurora-sizing/clientgo/baseproto";
package org.anonymous.grpc;


enum CmdType {
	CMD_UNDEFINED = 0;
	CMD_ATTACH = 1;
	CMD_CHANGE_INIT_DATA = 2;
	CMD_GET_UNIQUE_ID = 3;
	CMD_GET_BY_NAME = 4;
	CMD_GET_DISK_INFO = 5;
	CMD_INSERT = 6;
	CMD_UPDATE = 7;
	CMD_DELETE = 8;
	CMD_RENAME = 9;
	CMD_INCREMENTAL = 10;
	CMD_NAME_LOOKUP = 11;
	CMD_NAME_LOOKUP_BY_TYPE = 12;
	CMD_TRANS_BEGIN = 13;
	CMD_GET_STATISTICS = 14;
	CMD_GET_TIME = 15;
	CMD_SET_TIME = 16;
	CMD_INDEX_CREATE = 17;
	CMD_INDEX_DESTROY = 18;
	CMD_INDEX_OPEN = 19;
	CMD_INDEX_CLOSE = 20;
	CMD_INDEX_INSERT = 21;
	CMD_INDEX_DELETE = 22;
	CMD_INDEX_UPDATE = 23;
	CMD_INDEX_RENAME = 24;
	CMD_INDEX_INCREMENTAL = 25;
	CMD_INDEX_GET = 26;
	CMD_DEBUG = 27;
	CMD_SYNC_POINT_SAVE = 28;
	CMD_SYNC_POINT_CLEANUP = 29;
	CMD_DB_VALIDATE = 30;
	CMD_GET_CONN_INFO = 31;
	CMD_KILL_CONNECTION = 32;
	CMD_TRANS_GET_HEAD = 33;
	CMD_TRANS_GET_PARTS = 34;
	CMD_TRANS_GET_STATE = 35;
	CMD_GET_INDEX_DESCRIPTOR = 36;
	CMD_SHUTDOWN = 37;
	CMD_ERROR_LOG_GET_STATE = 38;
	CMD_ERROR_LOG_GET_PART = 39;
	CMD_DB_CHECK_SUM = 40;
	CMD_GET_FROM_SYNCPOINT = 41;
	CMD_INDEX_CHECK_SUM = 42;
	CMD_TRANS_MAP = 43;
	CMD_OBJECT_CHECK_SUM = 44;
	CMD_FILE_OPEN = 45;
	CMD_FILE_CLOSE = 46;
	CMD_FILE_READ = 47;
	CMD_FILE_INFO_GET = 48;
	CMD_SYNC_POINT_ASYNC_SAVE = 49;
	CMD_SYNC_POINT_ASYNC_ABORT = 50;
	CMD_GET_UTILIZATION = 51;
	CMD_INDEX_GET_SECURITY = 52;
	CMD_SOURCE_INFO = 53;
	CMD_SELF_DESCRIBING = 54;
	CMD_INDEX_GET_BY_NAME = 55;
	CMD_COLLECT_CLIENT_STATS = 56;
	CMD_INDEX_GET_MANY = 57;
	CMD_GET_MANY_BY_NAME = 58;
	CMD_GET_CONFIGS = 59;
	CMD_SET_CONFIG = 60;
	CMD_TRANS_GET_MANY = 61;
	CMD_DEBUG_LRU = 62;
	CMD_MAX_TRANSATION_ID_MAP_GET = 63;
	CMD_TRANS_GET_PARTS_MANY_INIT = 64;
	CMD_TRANS_COMMIT_MANY_INIT = 65;
	CMD_TRANS_COMMIT_MANY_SYNC = 66;
	CMD_GET_AGGREGATE_DETAIL = 67;
	CMD_GET_DISK_INFO_MANY = 68;
	CMD_INDEX_GET_BY_NAME_MANY = 69;
	CMD_SUBSCRIBE_POSITION_UPDATE = 70;
	CMD_SERVER_INFO = 71;
	CMD_GET_UNIQUE_ID64 = 72;
	CMD_IDS_CREATE = 73;
	CMD_IDS_DESTROY = 74;
	CMD_IDS_INFO = 75;
	CMD_IDS_LIST = 76;
	CMD_IDS_INDEX_CREATE = 77;
	CMD_IDS_INDEX_INFO = 78;
	CMD_IDS_INDEX_LIST = 79;
	CMD_IDS_GET_BY_NAME = 80;
	CMD_IDS_GET_BY_NAME_MANY = 81;
	CMD_IDS_QUERY = 82;
	CMD_SERVER_ADMIN = 83;
	CMD_GET_BY_NAME_MANY_EXT = 84;
	CMD_POSITION_QUERY = 85;
	CMD_ATTACH_EXT = 86;
	CMD_END_OF_TABLE_MARKER = 87;
	CMD_ADMIN_ATTACH = 88;
	CMD_ADMIN_CONN_INFO = 89;
}
